--- a/SpbWalletExport/App.config
+++ b/SpbWalletExport/App.config
@@ -1,9 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="SpbWalletFilePath" value="c:\OpenSource\TestArea\EmptyWallet.swl" />        
+    <add key="SPBWalletFilePath" value="c:\OpenSource\TestArea\TestWallet.swl" />
+    <add key="Password" value="TestPassword" />
   </appSettings>
-  <startup> 
-      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
   </startup>
 </configuration>
