--- a/SpbWalletExport/packages.config
+++ b/SpbWalletExport/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="System.Data.SQLite.Core" version="1.0.92.0" targetFramework="net451" />
+  <package id="sqlite-net" version="1.0.8" targetFramework="net451" />
 </packages>
